--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1291,7 +1291,7 @@
   position: absolute;
   display: none; /* Don't retain these layers when not needed */
   opacity: 0;
-  background: #ffffff;
+  background: var(--body-background-color);
   min-width: 246px;
   max-width: 275px;
   padding: 15px;
