--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -63,8 +63,6 @@
   --lh-score-highlight-bg: hsla(0, 0%, 90%, 0.2);
   --lh-score-icon-background-size: 24px;
   --lh-group-icon-background-size: var(--lh-score-icon-background-size);
-  --lh-export-icon-size: var(--lh-score-icon-background-size);
-  --lh-export-icon-color: var(--medium-75-gray);
   --lh-score-margin: 12px;
   --lh-table-header-bg: #f8f9fa;
   --lh-table-higlight-bg: hsla(0, 0%, 75%, 0.1);
@@ -78,7 +76,6 @@
   --lh-audit-group-vpadding: 8px;
   --lh-section-vpadding: 12px;
   --chevron-size: 12px;
-  --inner-audit-left-padding: calc(var(--score-shape-size) + var(--score-shape-margin-left) + var(--score-shape-margin-right));
 
   /* Palette. */
   --color-black-100: #F5F5F5;
@@ -88,7 +85,6 @@
   --color-black-600: #757575;
   --color-black-800: #424242;
   --color-black-900: #212121;
-  --off-black: #111111;
   --color-black: #000000;
   --color-blue: #2962FF;
   --color-green-700: #018642;
@@ -108,8 +104,8 @@
   --env-name-min-width: 220px;
   --env-tem-padding: 10px 0px;
   --expandable-padding: 0 0 2px calc(var(--score-shape-margin-left) + var(--score-shape-size) + var(--score-shape-margin-right));
-  --gauge-circle-size-big: 112px;
-  --gauge-circle-size: 80px;
+  --gauge-circle-size-big: 120px;
+  --gauge-circle-size: 96px;
   --header-padding: 20px 0 20px 0;
   --highlighter-bg: var(--color-black-400);
   --icon-square-size: calc(var(--score-shape-size) * 0.88);
@@ -119,13 +115,14 @@
   --plugin-icon-size: 65%;
   --pwa-icon-margin: 0 6px 0 -2px;
   --pwa-icon-size: var(--topbar-icon-size);
-  --score-container-padding: 8px;
-  --score-container-width: 148px;
-  --score-number-font-size-big: 38px;
-  --score-number-font-size: 28px;
+  --score-container-padding: 12px;
+  --score-container-width: 160px;
+  --score-number-font-size-big: 42px;
+  --score-number-font-size: 34px;
   --score-shape-margin-left: 4px;
   --score-shape-margin-right: 12px;
-  --score-shape-margin: 0 var(--score-shape-margin-right) 0 var(--score-shape-margin-left);
+  --score-shape-margin-top: 7px;
+  --score-shape-margin: var(--score-shape-margin-top) var(--score-shape-margin-right) 0 var(--score-shape-margin-left);
   --score-shape-size: 12px;
   --score-title-font-size-big: 28px;
   --score-title-font-size: 20px;
@@ -135,10 +132,9 @@
   --scorescale-width: 18px;
   --section-padding: 40px;
   --topbar-bg: var(--color-black-100);
-  --topbar-height: 32px;
+  --topbar-height: 36px;
   --topbar-icon-size: 24px;
   --topbar-padding: 0 8px;
-  --metrics-toggle-color: var(--color-black-200);
 
   --color-average-secondary: var(--color-orange-700);
   --color-average: var(--color-orange);
@@ -184,8 +180,7 @@
   --topbar-bg: var(--color-black);
   --plugin-badge-bg: var(--color-black-800);
   --header-bg-color: var(--color-black-900);
-  --env-item-bg: var(--color-black);
-  --report-secondary-border-color: var(--color-black-200);
+  --env-item-bg: rgba(0, 0, 0, 0.5);
 
   --body-background-color: var(--color-black-900);
   --body-text-color: var(--color-black-100);
@@ -217,17 +212,19 @@
     --header-padding: 16px 0 16px 0;
     --plugin-icon-size: 75%;
     --pwa-icon-margin: 0 7px 0 -3px;
+    --score-container-padding: 8px;
     --score-container-width: 112px;
     --score-number-font-size-big: 34px;
     --score-number-font-size: 26px;
     --score-shape-margin-left: 2px;
+    --score-shape-margin-top: 7px;
     --score-shape-size: 10px;
     --score-title-font-size-big: 22px;
     --score-title-font-size: 14px;
     --score-title-line-height-big: 26px;
     --score-title-line-height: 20px;
     --section-padding: 24px;
-    --topbar-height: 28px;
+    --topbar-height: 32px;
     --topbar-icon-size: 20px;
   }
 
@@ -300,23 +297,6 @@
 }
 
 .lh-container {
-  /*
-  Text wrapping in the report is so much FUN!
-  We have a `word-break: break-word;` globally here to prevent a few common scenarios, namely
-  long non-breakable text (usually URLs) found in:
-    1. The footer
-    2. .lh-node (outerHTML)
-    3. .lh-code
-
-  With that sorted, the next challenge is appropriate column sizing and text wrapping inside our
-  .lh-details tables. Even more fun.
-    * We don't want table headers ("Potential Savings (ms)") to wrap or their column values, but
-    we'd be happy for the URL column to wrap if the URLs are particularly long.
-    * We want the narrow columns to remain narrow, providing the most column width for URL
-    * We don't want the table to extend past 100% width.
-    * Long URLs in the URL column can wrap. Util.getURLDisplayName maxes them out at 64 characters,
-      but they do not get any overflow:ellipsis treatment.
-  */
   word-break: break-word;
 }
 
@@ -328,6 +308,7 @@
 }
 
 .lh-audit__description, .lh-audit__stackpack {
+  --inner-audit-left-padding: calc(var(--text-indent) + var(--lh-audit-index-width) + 2 * var(--audit-item-gap));
   --inner-audit-right-padding: calc(var(--text-indent) + 2px);
   padding-left: var(--inner-audit-left-padding);
   padding-right: var(--inner-audit-right-padding);
@@ -339,7 +320,6 @@
   font-size: var(--body-font-size);
   margin-top: var(--default-padding);
   margin-bottom: var(--default-padding);
-  margin-left: var(--inner-audit-left-padding);
   /* whatever the .lh-details side margins are */
   width: 100%;
 }
@@ -371,6 +351,9 @@
   pointer-events: none;
 }
 
+.report-icon--share {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/></svg>');
+}
 .report-icon--print {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"/><path fill="none" d="M0 0h24v24H0z"/></svg>');
 }
@@ -383,14 +366,28 @@
 .report-icon--download {
   background-image: url('data:image/svg+xml;utf8,<svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
 }
-.report-icon--dark {
-  background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 100 125"><path d="M50 23.587c-16.27 0-22.799 12.574-22.799 21.417 0 12.917 10.117 22.451 12.436 32.471h20.726c2.32-10.02 12.436-19.554 12.436-32.471 0-8.843-6.528-21.417-22.799-21.417zM39.637 87.161c0 3.001 1.18 4.181 4.181 4.181h.426l.41 1.231C45.278 94.449 46.042 95 48.019 95h3.963c1.978 0 2.74-.551 3.365-2.427l.409-1.231h.427c3.002 0 4.18-1.18 4.18-4.181V80.91H39.637v6.251zM50 18.265c1.26 0 2.072-.814 2.072-2.073v-9.12C52.072 5.813 51.26 5 50 5c-1.259 0-2.072.813-2.072 2.073v9.12c0 1.259.813 2.072 2.072 2.072zM68.313 23.727c.994.774 2.135.634 2.91-.357l5.614-7.187c.776-.992.636-2.135-.356-2.909-.992-.776-2.135-.636-2.91.357l-5.613 7.186c-.778.993-.636 2.135.355 2.91zM91.157 36.373c-.306-1.222-1.291-1.815-2.513-1.51l-8.85 2.207c-1.222.305-1.814 1.29-1.51 2.512.305 1.223 1.291 1.814 2.513 1.51l8.849-2.206c1.223-.305 1.816-1.291 1.511-2.513zM86.757 60.48l-8.331-3.709c-1.15-.512-2.225-.099-2.736 1.052-.512 1.151-.1 2.224 1.051 2.737l8.33 3.707c1.15.514 2.225.101 2.736-1.05.513-1.149.1-2.223-1.05-2.737zM28.779 23.37c.775.992 1.917 1.131 2.909.357.992-.776 1.132-1.917.357-2.91l-5.615-7.186c-.775-.992-1.917-1.132-2.909-.357s-1.131 1.917-.356 2.909l5.614 7.187zM21.715 39.583c.305-1.223-.288-2.208-1.51-2.513l-8.849-2.207c-1.222-.303-2.208.289-2.513 1.511-.303 1.222.288 2.207 1.511 2.512l8.848 2.206c1.222.304 2.208-.287 2.513-1.509zM21.575 56.771l-8.331 3.711c-1.151.511-1.563 1.586-1.05 2.735.511 1.151 1.586 1.563 2.736 1.052l8.331-3.711c1.151-.511 1.563-1.586 1.05-2.735-.512-1.15-1.585-1.562-2.736-1.052z"/></svg>');
+
+.dark .report-icon--share {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M0 0h24v24H0z"/><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"/></svg>');
+}
+.dark .report-icon--print {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="white" d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"/><path fill="none" d="M0 0h24v24H0z"/></svg>');
+}
+.dark .report-icon--copy {
+  background-image: url('data:image/svg+xml;utf8,<svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z" /><path fill="white" d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>');
+}
+.dark .report-icon--open {
+  background-image: url('data:image/svg+xml;utf8,<svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z" /><path fill="white" d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/></svg>');
+}
+.dark .report-icon--download {
+  background-image: url('data:image/svg+xml;utf8,<svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
 }
 
 /* Node */
 .lh-node {
   display: block;
   font-family: var(--monospace-font-family);
+  word-break: break-word;
   color: hsl(174, 100%, 27%);
 }
 
@@ -458,12 +455,12 @@
 }
 .lh-category-header__description  {
   font-size: var(--body-font-size);
-  text-align: center;
   margin: 0px auto;
   max-width: 400px;
 }
 
 
+.lh-audit__title,
 .lh-audit__display-text,
 .lh-load-opportunity__sparkline,
 .lh-chevron-container {
@@ -473,24 +470,13 @@
   margin-right: 0;
 }
 
-.lh-audit__display-text {
+.lh-audit__title {
   flex: 1;
-}
-
-/* Prepend display text with em dash separator. But not in Opportunities. */
-.lh-audit__display-text:not(:empty):before {
-  content: '—';
-  margin-right: var(--audit-item-gap);
-}
-.lh-audit-group.lh-audit-group--load-opportunities .lh-audit__display-text:not(:empty):before {
-  display: none;
 }
 
 /* Expandable Details (Audit Groups, Audits) */
 .lh-audit__header {
   display: flex;
-  align-items: center;
-  font-weight: 500;
   padding: var(--lh-audit-vpadding) 0;
 }
 
@@ -562,10 +548,9 @@
 
 .lh-metric__innerwrap {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 10px 0;
+  padding: 8px var(--text-indent);
 }
 
 .lh-metric__details {
@@ -579,7 +564,9 @@
 
 .lh-metrics__disclaimer {
   color: var(--medium-75-gray);
+  text-align: right;
   margin: var(--lh-section-vpadding) 0;
+  padding: 0 var(--text-indent);
 }
 
 .lh-metric__description {
@@ -587,36 +574,30 @@
   color: var(--secondary-text-color);
   padding: var(--expandable-padding);
 }
+.lh-audit-group--metrics__show-descriptions .lh-metric__description {
+  display: block;
+}
 
 .lh-metric__value {
   white-space: nowrap; /* No wrapping between metric value and the icon */
   font-weight: 500;
 }
 
-/* No-JS toggle switch */
-/* Keep this selector sync'd w/ `magicSelector` in report-ui-features-test.js */
- .lh-metrics-toggle__input:checked ~ .lh-columns .lh-metric__description {
-  display: block;
+.lh-metrics-toggle {
+  position: relative;
 }
-
 .lh-metrics-toggle__input {
   cursor: pointer;
   opacity: 0;
   position: absolute;
-  right: 0;
-  width: 74px;
-  height: 28px;
-  top: -3px;
+  width: 100%;
+  height: 100%;
 }
-.lh-metrics-toggle__label {
+.lh-metrics-toggle label {
   display: flex;
   background-color: #eee;
   border-radius: 20px;
   overflow: hidden;
-  position: absolute;
-  right: 0;
-  top: -3px;
-  pointer-events: none;
 }
 .lh-metrics-toggle__input:focus + label {
   outline: -webkit-focus-ring-color auto 3px;
@@ -637,15 +618,10 @@
 .lh-metrics-toggle__lines {
   fill: var(--color-metric-toggle-lines);
 }
-
-.lh-metrics-toggle__label  {
-  background-color: var(--metrics-toggle-color);
-}
-
-.lh-metrics-toggle__label .lh-metrics-toggle__icon--less {
+.lh-metrics-toggle label .lh-metrics-toggle__icon--less {
   padding-left: 8px;
 }
-.lh-metrics-toggle__label .lh-metrics-toggle__icon--more {
+.lh-metrics-toggle label .lh-metrics-toggle__icon--more {
   padding-right: 8px;
 }
 
@@ -709,23 +685,24 @@
 }
 
 .lh-load-opportunity__header .lh-load-opportunity__col {
+  background-color: var(--medium-50-gray);
   color: var(--medium-75-gray);
+  text-align: center;
   display: unset;
   line-height: calc(2.3 * var(--body-font-size));
 }
 
 .lh-load-opportunity__col {
   display: flex;
+  justify-content: space-between;
 }
 
 .lh-load-opportunity__col--one {
   flex: 5;
-  align-items: center;
   margin-right: 2px;
 }
 .lh-load-opportunity__col--two {
   flex: 4;
-  text-align: right;
 }
 
 .lh-audit--load-opportunity .lh-audit__display-text {
@@ -824,7 +801,6 @@
 
 .lh-audit-group {
   margin-bottom: var(--audits-margin-bottom);
-  position: relative;
 }
 
 .lh-audit-group__header::before {
@@ -835,21 +811,6 @@
   margin: var(--pwa-icon-margin);
   display: inline-block;
   vertical-align: middle;
-}
-
-/* Style the "over budget" columns red. */
-.lh-audit-group--budgets .lh-table tbody tr td:nth-child(4),
-.lh-audit-group--budgets .lh-table tbody tr td:nth-child(5){
-  color: var(--color-red-700);
-}
-
-/* Align the "over budget request count" text to be close to the "over budget bytes" column. */
-.lh-audit-group--budgets .lh-table tbody tr td:nth-child(4){
-  text-align: right;
-}
-
-.lh-audit-group--budgets .lh-table {
-  width: 100%;
 }
 
 .lh-audit-group--pwa-fast-reliable .lh-audit-group__header::before {
@@ -901,10 +862,6 @@
   /* When the header takes 100% width, the chevron becomes small. */
   max-width: calc(100% - var(--chevron-size));
 }
-/* max-width makes the metric toggle not flush. metrics doesn't have a chevron so unset. */
-.lh-audit-group--metrics .lh-audit-group__header {
-  max-width: unset;
-}
 
 .lh-audit-group__header span.lh-audit-group__title {
   font-weight: bold;
@@ -921,7 +878,6 @@
 }
 .lh-audit-group__header span.lh-audit-group__description::before {
   content: '—';
-  margin: 0px var(--audit-item-gap);
 }
 
 .lh-clump > .lh-audit-group__header,
@@ -983,16 +939,15 @@
   white-space: normal;
   margin-top: 0;
   font-size: 85%;
+  word-break: break-word;
 }
 
 .lh-warnings {
   --item-margin: calc(var(--body-line-height) / 6);
-  color: var(--color-average);
+  border: 1px solid var(--color-average);
+  border-radius: 4px;
   margin: var(--lh-audit-vpadding) 0;
   padding: calc(var(--lh-audit-vpadding) / 2) var(--lh-audit-vpadding);
-}
-.lh-warnings span {
-  font-weight: bold;
 }
 
 .lh-warnings--toplevel {
@@ -1179,30 +1134,23 @@
 .lh-table {
   --image-preview-size: 24px;
   border-collapse: collapse;
-  /* Can't assign padding to table, so shorten the width instead. */
-  width: calc(100% - var(--inner-audit-left-padding));
 }
 
+.lh-table thead {
+  background-color: var(--lh-table-higlight-bg);
+}
 .lh-table thead th {
   font-weight: normal;
-  color: var(--color-black-600);
-  /* See text-wrapping comment on .lh-container. */
-  word-break: normal;
+  word-wrap: normal;
 }
 
-.lh-table tbody tr:nth-child(odd) {
+.lh-table tbody tr:nth-child(even) {
   background-color: var(--lh-table-higlight-bg);
 }
 
 .lh-table th,
 .lh-table td {
   padding: 8px 6px;
-}
-.lh-table th:first-child {
-  padding-left: 0;
-}
-.lh-table th:last-child {
-  padding-right: 0;
 }
 
 /* Looks unnecessary, but mostly for keeping the <th>s left-aligned */
@@ -1220,7 +1168,6 @@
 .lh-table-column--ms,
 .lh-table-column--numeric {
   text-align: right;
-  word-break: normal;
 }
 
 
@@ -1230,6 +1177,7 @@
 
 .lh-table-column--url {
   min-width: 250px;
+  white-space: nowrap;
 }
 
 /* Keep columns narrow if they follow the URL column */
@@ -1242,13 +1190,18 @@
   width: 12%;
 }
 
+.lh-text__url {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .lh-text__url:hover {
   text-decoration: underline dotted #999;
   text-decoration-skip-ink: auto;
 }
 
 .lh-text__url > .lh-text, .lh-text__url-host {
-  display: inline;
+  display: inline-block;
 }
 
 .lh-text__url-host {
