--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1377,6 +1377,7 @@
   right: 0px;
   top: -190px;
   box-shadow: 2px 2px 6px #999;
+  overflow: hidden;
 }
 .lh-element-screenshot__image {
   outline: 2px solid #777;
