--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1375,9 +1375,9 @@
 .lh-element-screenshot__content {
   position: absolute;
   right: 0px;
-  top: -300px;
   box-shadow: 2px 2px 6px #999;
   overflow: hidden;
+  z-index: 1;
 }
 .lh-element-screenshot__image {
   outline: 2px solid #777;
