--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1378,6 +1378,12 @@
   box-shadow: 2px 2px 6px #999;
   overflow: hidden;
   z-index: 1;
+
+  /* Try always showing in bottom right **/
+  position: fixed;
+  right: 0 !important;
+  bottom: 0 !important;
+  top: auto !important;
 }
 .lh-element-screenshot__image {
   outline: 2px solid #777;
