--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1382,7 +1382,7 @@
   /* Try always showing in bottom right **/
   position: fixed;
   right: 0 !important;
-  bottom: 0 !important;
+  bottom: 0;
   top: auto !important;
 }
 .lh-element-screenshot__image {
