margin for container

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -327,6 +327,8 @@
       but they do not get any overflow:ellipsis treatment.
   */
   word-break: break-word;
+
+  margin-top: var(--top-of-page-offset);
 }
 
 .lh-audit-group a,
