Don't inline elem screenshot again and again

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1502,7 +1502,7 @@
 /* Element screenshot */
 .lh-element-screenshot {
   position: relative;
-  pointer-events: none;
+  /* pointer-events: none; */
   display: inline-block;
   overflow: hidden;
 
