--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1121,7 +1121,8 @@
   outline: none;
 }
 .lh-gauge__wrapper:focus .lh-gauge {
-  outline: -webkit-focus-ring-color auto 5px;
+  border-radius: var(--gauge-circle-size);
+  box-shadow: 0px 0px 5px 2px var(--color-blue);
 }
 
 .lh-gauge__label {
