report: show fail icon for errors

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -428,7 +428,8 @@
 .lh-audit--fail .lh-audit__display-text {
   color: var(--color-fail-secondary);
 }
-.lh-audit--fail .lh-audit__score-icon {
+.lh-audit--fail .lh-audit__score-icon,
+.lh-audit--error .lh-audit__score-icon {
   border-left: calc(var(--score-icon-size) / 2) solid transparent;
   border-right: calc(var(--score-icon-size) / 2) solid transparent;
   border-bottom: var(--score-icon-size) solid var(--color-fail);
@@ -442,10 +443,6 @@
 .lh-audit--notapplicable .lh-audit__score-icon {
   border-radius: 100%;
   background: var(--color-gray-400);
-}
-
-.lh-audit--error .lh-audit__score-icon {
-  display: none;
 }
 
 .lh-audit--informative .lh-audit__display-text {
@@ -694,7 +691,8 @@
 .lh-metric--fail .lh-metric__value {
   color: var(--color-fail-secondary);
 }
-.lh-metric--fail .lh-metric__innerwrap::before {
+.lh-metric--fail .lh-metric__innerwrap::before,
+.lh-metric--error .lh-metric__innerwrap::before {
   border-left: calc(var(--score-icon-size) / 2) solid transparent;
   border-right: calc(var(--score-icon-size) / 2) solid transparent;
   border-bottom: var(--score-icon-size) solid var(--color-fail);
@@ -703,11 +701,6 @@
 .lh-metric--error .lh-metric__value,
 .lh-metric--error .lh-metric__description {
   color: var(--color-fail-secondary);
-}
-
-/* Hide icon if there was an error */
-.lh-metric--error .lh-metric__innerwrap::before {
-  display: none;
 }
 
 /* Perf load opportunity */
